CREATE TABLE estado (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    nome_estado VARCHAR(50) NOT NULL,
    uf VARCHAR(2) NOT NULL,
    CONSTRAINT pk_estado PRIMARY KEY (id),
    CONSTRAINT uk_estado_nome UNIQUE (nome_estado),
    CONSTRAINT uk_estado_uf UNIQUE (uf)
);

CREATE TABLE cidade (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    nome_cidade VARCHAR(100) NOT NULL,
    id_estado BIGINT NOT NULL,
    CONSTRAINT pk_cidade PRIMARY KEY (id),
    CONSTRAINT uk_cidade_nome_estado UNIQUE (nome_cidade, id_estado),
    CONSTRAINT fk_cidade_estado FOREIGN KEY (id_estado) REFERENCES estado (id)
);

CREATE TABLE usuario (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    nome_real VARCHAR(100) NOT NULL,
    nome_anonimo VARCHAR(50),
    data_nascimento DATE NOT NULL,
    celular VARCHAR(20),
    senha VARCHAR(255) NOT NULL,
    data_cadastro DATE NOT NULL,
    id_cidade BIGINT NOT NULL,
    CONSTRAINT pk_usuario PRIMARY KEY (id),
    CONSTRAINT uk_usuario_celular UNIQUE (celular),
    CONSTRAINT fk_usuario_cidade FOREIGN KEY (id_cidade) REFERENCES cidade (id)
);

CREATE TABLE tb_ajudante (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    area_atuacao VARCHAR(100) NOT NULL,
    motivacao CLOB,
    disponivel BOOLEAN NOT NULL,
    rating FLOAT(53),
    CONSTRAINT pk_ajudante PRIMARY KEY (id),
    CONSTRAINT ck_ajudante_rating CHECK (rating IS NULL OR (rating >= 0 AND rating <= 5))
);

CREATE TABLE chat (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY,
    id_usuario BIGINT NOT NULL,
    id_ajudante BIGINT NOT NULL,
    data_inicio TIMESTAMP(6) NOT NULL,
    data_fim TIMESTAMP(6),
    status ENUM('INICIADO', 'EM_ANDAMENTO', 'FINALIZADO_USUARIO', 'FINALIZADO_AJUDANTE', 'FINALIZADO_SISTEMA') NOT NULL,
    CONSTRAINT pk_chat PRIMARY KEY (id),
    CONSTRAINT fk_chat_usuario FOREIGN KEY (id_usuario) REFERENCES usuario (id),
    CONSTRAINT fk_chat_ajudante FOREIGN KEY (id_ajudante) REFERENCES tb_ajudante (id),
    CONSTRAINT ck_chat_data_fim CHECK (data_fim IS NULL OR data_fim >= data_inicio)
);

CREATE TABLE tb_mensagem (
    id_mensagem BIGINT GENERATED BY DEFAULT AS IDENTITY,
    id_chat BIGINT NOT NULL,
    id_remetente BIGINT NOT NULL,
    texto VARCHAR(1000) NOT NULL,
    data_envio TIMESTAMP(6) NOT NULL,
    CONSTRAINT pk_mensagem PRIMARY KEY (id_mensagem),
    CONSTRAINT fk_mensagem_chat FOREIGN KEY (id_chat) REFERENCES chat (id),
    CONSTRAINT fk_mensagem_remetente FOREIGN KEY (id_remetente) REFERENCES usuario (id)
);
