erDiagram
    TB_ESTADO {
        NUMBER ID_ESTADO PK
        VARCHAR NM_ESTADO
        VARCHAR SG_ESTADO
    }

    TB_CIDADE {
        NUMBER ID_CIDADE PK
        VARCHAR NM_CIDADE
        NUMBER ID_ESTADO FK
    }

    TB_USUARIO {
        NUMBER ID_USUARIO PK
        VARCHAR NM_USUARIO_REAL
        VARCHAR NM_USUARIO_ANONIMO
        DATE DT_NASCIMENTO
        VARCHAR NR_CELULAR
        VARCHAR DS_SENHA
        DATE DT_CADASTRO
        NUMBER ID_CIDADE FK
    }

    TB_AJUDANTE {
        NUMBER ID_AJUDANTE PK
        VARCHAR NM_AREA_ATUACAO
        VARCHAR NM_LOGIN
        VARCHAR DS_SENHA
        CLOB DS_MOTIVACAO
        NUMBER FL_DISPONIVEL
        NUMBER NR_RATING
    }

    TB_CHAT {
        NUMBER ID_CHAT PK
        NUMBER ID_USUARIO FK
        NUMBER ID_AJUDANTE FK
        TIMESTAMP DH_INICIO
        TIMESTAMP DH_FIM
        VARCHAR ST_CHAT
    }

    TB_MENSAGEM {
        NUMBER ID_MENSAGEM PK
        NUMBER ID_CHAT FK
        NUMBER ID_USUARIO_REMETENTE FK
        NUMBER ID_AJUDANTE_REMETENTE FK
        VARCHAR TX_MENSAGEM
        TIMESTAMP DH_ENVIO
    }

    TB_ADMIN_ACCOUNT {
        NUMBER ID_ADMIN_ACCOUNT PK
        VARCHAR NM_LOGIN
        VARCHAR DS_SENHA
        TIMESTAMP DH_ATUALIZACAO
    }

    TB_ESTADO ||--o{ TB_CIDADE : "FK_TB_CIDADE_ID_EST"
    TB_CIDADE ||--o{ TB_USUARIO : "FK_TB_USUARIO_ID_CID"
    TB_USUARIO ||--o{ TB_CHAT : "FK_TB_CHAT_ID_USUARIO"
    TB_AJUDANTE ||--o{ TB_CHAT : "FK_TB_CHAT_ID_AJUDANTE"
    TB_CHAT ||--o{ TB_MENSAGEM : "FK_TB_MENSAGEM_ID_CHAT"
    TB_USUARIO ||--o{ TB_MENSAGEM : "FK_TB_MSG_ID_USR_REM"
    TB_AJUDANTE ||--o{ TB_MENSAGEM : "FK_TB_MSG_ID_AJD_REM"
